@@ -1,4 +1,5 @@
 HEAD
+	+ Revert useless chown workaround
 	+ Wait for the services before ending the start daemon action to prevent
 	  its usage before being ready
 3.0.23
